--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Portfolio.css">
+    <link rel="stylesheet" href="./Portfolio.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -50,7 +50,7 @@
         <div class="home-img">
             <div class="img-box">
                 <div class="img-item">
-                  <img src="Portfolio.jpeg" alt>
+                  <img src="./Portfolio.jpeg" alt>
                 </div>
             </div>
         </div>
